point of interest is now jump point. Fixed scroll bar in Firefox.

--- a/jps_visualiser/web/resources/styles.css
+++ b/jps_visualiser/web/resources/styles.css
@@ -702,6 +702,10 @@ g.blinking {
   font-weight: 600;
 }
 
+.history .turnOverview .description {
+  height: 0px;
+}
+
 .history .turnOverview .description .explanationPart {
   line-height: 25px;
 }
